syntax = "proto3";

package pb;

// The authentication service definition.
service Auth {
  // Authentication mqtt client
  rpc AuthClient (AuthRequest) returns (AuthResponse) {}
}

// The request message for AuthClient
message AuthRequest {
  string clientKey = 1;
  string username = 2;
  string clientSecret = 3;
}

// The request message for AuthClient
message AuthResponse {
  string clientKey = 1;
  string username = 2;
  string code = 3; // return 200 when success
  string detail = 4; // a human-readable explanation
}
